Fix header dropdown z-index (#2532)
* fix header dropdown z-index

* linting

* omggggggggg

--- a/app/authentication-container/css/header.css
+++ b/app/authentication-container/css/header.css
@@ -150,11 +150,11 @@ svg.zendeskIcon {
   top: 60px;
   right: 40px;
   width: 175px;
+  z-index: var(--sidebar-z-index);
   background-color: var(--highlight-background-color);
   box-shadow: var(--login-drop-shadow);
   padding: 20px;
   text-align: left;
-  z-index: 3;
 }
 
 .dropdown a {
